# docs/swagger.json
@@ -3452,6 +3452,12 @@
                         "$ref": "#/definitions/entity.Applicant"
                     }
                 },
+                "applied_date": {
+                    "type": "string"
+                },
+                "apply_status": {
+                    "$ref": "#/definitions/entity.ApplicantStatus"
+                },
                 "content_description": {
                     "type": "string"
                 },
@@ -5225,6 +5231,12 @@
         "response.JobPostingResponse": {
             "type": "object",
             "properties": {
+                "applied_date": {
+                    "type": "string"
+                },
+                "apply_status": {
+                    "$ref": "#/definitions/entity.ApplicantStatus"
+                },
                 "content_description": {
                     "type": "string"
                 },
